# GitC

./: CMakeLists.txt
Lab_1/: CMakeLists.txt
Lab_1/lab1.1/: CMakeLists.txt
Lab_1/lab1.1/task1/: CMakeLists.txt  task1.c
Lab_1/task1/: CMakeLists.txt
Lab_1/task1/src_c/: task1.c
Lab_1/task1/src_exe/: CMakeLists.txt
Lab_1/task2/: CMakeLists.txt
Lab_1/task2/src_c/: CMakeLists.txt  task2.c
Lab_1/task2/src_exe/: CMakeLists.txt
Lab_1/task3/: CMakeLists.txt
Lab_1/task3/src_c/: CMakeLists.txt
Lab_1/task3/src_exe/: task3.c
Lab_1/task4/: CMakeLists.txt
Lab_1/task4/src_exe/: CMakeLists.txt  task4.c
Lab_1/task5/: CMakeLists.txt
Lab_1/task5/src_exe/: CMakeLists.txt  task5_func.c  task5_main.c
Lab_1/task6/: CMakeLists.txt
Lab_1/task6/src_exe/: CMakeLists.txt  task6_func.c  task6_main.c
Lab_1/task7/: CMakeLists.txt
Lab_1/task7/src_exe/: CMakeLists.txt
Lab_1/task8/: CMakeLists.txt
Lab_1/task8/src_exe/: CMakeLists.txt
Lab_1/task8/src_lib/: CMakeLists.txt  task7_func.c
Lab_2/: CMakeLists.txt
Lab_2/src_exe/: main.c
Lab_2/src_lib/: CMakeLists.txt  task1_ar.c  task2_f.c
Lab_2/task1/src_exe/: CMakeLists.txt  main.c  task2_f.c
Lab_3/version do...while/: CMakeLists.txt
Lab_3/version do...while/includes/: head.h
Lab_3/version do...while/src_exe/: CMakeLists.txt  main.c
Lab_3/version do...while/src_lib/: CMakeLists.txt
Lab_3/version for/: CMakeLists.txt
Lab_3/version for/src_exe/: CMakeLists.txt  main.c
Lab_3/version for/src_lib/: CMakeLists.txt
Lab_3/version while/: CMakeLists.txt
Lab_3/version while/includes/: head.h
Lab_3/version while/src_exe/: CMakeLists.txt  main.c
Lab_3/version while/src_lib/: CMakeLists.txt
Lab_4/: CMakeLists.txt
Lab_4/Lab_4/: CMakeLists.txt
Lab_4/Lab_4/src_exe/: CMakeLists.txt  task1.c
Lab_4/Task1/: CMakeLists.txt
Lab_4/Task1/includes/: head.h
Lab_4/Task1/src_exe/: CMakeLists.txt  main.c
Lab_4/Task1/src_lib/: CMakeLists.txt  func.c
Lab_4/Task2/: CMakeLists.txt
Lab_4/Task2/includes/: head.h
Lab_4/Task2/src_exe/: CMakeLists.txt  main.c
Lab_4/Task2/src_lib/: CMakeLists.txt  readArray.c  sortStackArray.c  writeArray.c
Lab_5/includes/: head.h
Lab_5/src_exe/: main.c
Lab_5/src_lib/: CMakeLists.txt  delete.c  find.c  strlen.c
Lab_6/includes/: head.h
Lab_6/src_exe/: CMakeLists.txt  main.c
Lab_7/: CMakeLists.txt
Lab_7/Task[3-6]/src_exe/: main.c
Lab_7/Task[3-6]/src_lib/: delete.c  insert.c  strcat.c  strcpy.c
