# CMakeList.txt: проект CMake для Lab_4; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

# Добавьте источник в исполняемый файл этого проекта.
add_executable (Lab_4 "task1.c")

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
